--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/JamesWClark/RestApiTutorial#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "config": "^3.3.7",
     "dayjs": "^1.11.5",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.5.2",
     "pino": "^8.4.1",
-    "pino-pretty": "^9.0.0"
+    "pino-pretty": "^9.0.0",
+    "zod": "^3.18.0"
   }
 }
