--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "config": "^3.3.7",
     "dayjs": "^1.11.5",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.5.2",
+    "nanoid": "^3.1.30",
     "pino": "^8.4.1",
     "pino-pretty": "^9.0.0",
     "zod": "^3.18.0"
